# Differ

./: .gitignore  LICENSE  README.md  differ.py  pyproject.toml
Formula/: differ.rb
scripts/: build-binary.sh
