[project]
name = "differ"
version = "0.1.1"
description = "Terminal UI for monitoring multiple local Git repositories"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "MartinWie" }]

[project.scripts]
differ = "differ:main"

[project.optional-dependencies]
build = ["pyinstaller>=6,<7"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py311"
